Bug 52143 - Unicode tooltips corrupt
Summary: Unicode tooltips corrupt
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
3.5.5.3 release
Hardware: Other Windows (All)
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: target:3.7.0 target:3.6.0.2 target:3.5.6
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-16 09:10 UTC by Nguyen Vu Hung
Modified: 2012-07-16 13:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nguyen Vu Hung 2012-07-16 09:10:50 UTC
Environment:
Windows 7 English Pro version, locale is set as "jp" (Japanese)
LibreOffice: 3.5.4.2, 3.6 beta

What I think something is wrong:
The tooltip, which uses Unicode AFAIK, is corrupted,
Vietnamese characters with accents become question marks.
Evidence: http://www.flickr.com/photos/vuhung/7580754298/in/photostream

Questions:
- Any other l10n team has this problem too?
- How to configure so that Vietnamese characters are correctly shown, or
- Is this a bug?
Comment 1 Nguyen Vu Hung 2012-07-16 09:15:03 UTC
From Timar:

<quote>
It is a bug, please file it to Bugzilla and assign it to me. I think I
know how to fix it, but I don't have time today, and I don't want to
forget it.
We need to use Unicode instead of legacy codepages, beginning from here:
http://opengrok.libreoffice.org/xref/core/sfx2/source/appl/shutdowniconw32.cxx#283

Andras
</quote>
Comment 2 Not Assigned 2012-07-16 13:07:56 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=34ebc821d9942641c256157ada9f817338832711

fdo#52143 use Unicode functions for QuickStarter tooltip
Comment 3 Not Assigned 2012-07-16 13:37:10 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dd57301eef0d99943672da7fc3d453ee3db4ad6e&g=libreoffice-3-6

fdo#52143 use Unicode functions for QuickStarter tooltip


It will be available in LibreOffice 3.6.
Comment 4 Not Assigned 2012-07-16 13:43:39 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=827fb8662c6e7c8ca6db83cdf5dcd1fdd17dd411&g=libreoffice-3-5

fdo#52143 use Unicode functions for QuickStarter tooltip


It will be available in LibreOffice 3.5.6.