fdo#52143 use Unicode functions for QuickStarter tooltip

Change-Id: Ic9c7ed84925ea5b4ce324a98a1089102dcda24b8